Cleanup verbose variable usage in operf for easier debugging
This patch removes the "perf_events" verbose option which had
been used to enable debugging for both the recording phase of
profiling (where profile data from the kernel is being read by
the operf-record process) and the conversion phase.  Instead,
two new distinct verbose options are introduced: "record" and
"convert".

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/operf.1.in
+++ b/doc/operf.1.in
@@ -177,7 +177,7 @@ to wait until profiling is completed to do the conversion of profile data.
 .TP
 .BI "--verbose / -V " level
 A comma-separated list of debugging control values, used to increase the verbosity of the output.
-Valid values are:  debug, perf_events, misc, sfile, arcs, or the special value, 'all'.
+Valid values are:  debug, record, convert, misc, sfile, arcs, or the special value, 'all'.
 .br
 .TP
 .BI "--version / -v"
