Oprofile, opreport: fix to pass string of options from opannotate to objdump
Currently when passing a quoted string of two or more options from
opannotate to objdump, the objdump command fails.  The issue is when
an argument string passed to exec_command contains spaces.
This patch takes the quoted string of options to pass to objdump and
breaks the list of options up into individual arguments.  The objdump_params
is then updated so that there is one argument in each element of the vector
rather than string elements that may contain spaces.

This patch also updates the man page with examples of how to pass options
to the objdump from the opreport command.

Signed-off-by: Carl Love <cel@us.ibm.com>

--- a/doc/opannotate.1.in
+++ b/doc/opannotate.1.in
@@ -69,7 +69,21 @@ Only include symbols in the given comma-separated list.
 .br
 .TP
 .BI "--objdump-params [params]"
-Pass the given parameters as extra values when calling objdump.
+Pass the given parameters as extra values when calling objdump.  If more then
+one option is to be passed to objdump, the parameters must be enclosed in a
+quoted string.
+
+An example of where this option is useful is when your toolchain does not
+automatically recognize instructions that are specific to your processor.
+For example, on IBM POWER7/RHEL 6, objdump must be told that a binary file may have
+POWER7-specific instructions. The opannotate option to show the POWER7-specific
+instructions is:
+   --objdump-params=-Mpower7
+
+The opannotate option to show the POWER7-specific instructions,
+the source code (--source) and the line numbers (-l) would be:
+   --objdump-params="-Mpower7 -l --source"
+
 .br
 .TP
 .BI "--output-dir / -o [dir]"
