Fix configure on newer Debian and Ubuntu systems when using --enable-gui=qt4
This problem was reported in oprofile bug #3483426.  The resolution for
the bug was proposed by someone with a SourceForge user ID of "xypron".

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -206,7 +206,7 @@ if test "x$enable_gui"  = "xqt4"; then
 	exit
 	])
 	MOC=$(pkg-config --variable=moc_location QtCore)
-	UIC=$(pkg-config --variable=uic_location QtCore)3
+	UIC=$(dirname $(pkg-config --variable=uic_location QtCore))/uic3
 	QT_VERSION=$(pkg-config --modversion QtCore)
 
 dnl following are some sanity tests and workarounds for buggy QtCore.pc files
