Allow ppc64 events to be specified with or without _GRP<n> suffix
All events for IBM PowerPC server processors (except CYCLES) have
a _GRP<n> suffix.  This is because the legacy opcontrol profiler
can only profile events in the same group (i.e., having the same
_GRP<n> suffix).  But operf has no such restriction because it
can multiplex events; thus, so we should allow the user to pass
event names without the _GRP<n> suffix.

Signed-off-by: Maynard Johnson <maynardj@us.ibm.com>

--- a/doc/operf.1.in
+++ b/doc/operf.1.in
@@ -110,6 +110,12 @@ be specified using the symbolic name.  If no unit mask is specified, 0x0 will be
 used as the default.
 .P
 .RS
+On IBM PowerPC systems, events may be specified with or without the
+.I _GRP<n>
+suffix.  If no group number suffix is given, one will be automatically
+assigned; thus, OProfile post-processing tools will always show real event
+names that include the group number suffix.
+.P
 When no event specification is given, the default event for the running
 processor type will be used for profiling.
 Use
