Change location to store intermediate JIT dump files
Since JIT support was added to Oprofile the intermediate JIT dump files
holding the sampling data collected for a Java process were stored in a
hard coded directory /var/lib/oprofile/jitdump that was world-writable.
The setting of a session specific directory (i.e. "--session-dir=...")
was not used anyway.

Now during profiling JIT dump files are stored under /tmp/.oprofile/jitdump.
When opjitconv has finished the conversion of the JIT dump files (the result
is stored under the default location (e.g. /var/lib/oprofile, ./oprofile_data
or the specified session directory) the intermediate JIT dump file will be
deleted.

Signed-off-by: Daniel Hansel <daniel.hansel@linux.vnet.ibm.com>

--- a/libopagent/Makefile.am
+++ b/libopagent/Makefile.am
@@ -21,9 +21,13 @@ libopagent_la_LIBADD = $(BFD_LIBS)
 # intentionally break backward ABI compatability.  Use the
 # symbol versioning technique (via the version script) to add new or
 # change existing functions; then just increment the minor version.
-# See http://www.gnu.org/software/binutils/manual/ld-2.9.1/html_node/ld_25.html
+#
+# See http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
+# for information about library versioning.
+#
+# See http://www.gnu.org/software/gnulib/manual/html_node/LD-Version-Scripts.html
 # for details about the --version-script option.
-libopagent_la_LDFLAGS = -version-info  1:0:0 \
+libopagent_la_LDFLAGS = -version-info  1:1:0 \
 			-Wl,--version-script=${top_srcdir}/libopagent/opagent_symbols.ver \
 			@OP_LDFLAGS@
 
