Update configure.ac to work with automake 1.13
GNU automake 1.13 has removed support for AM_CONFIG_HEADER and for the 2
parameter version of AM_INIT_AUTOMAKE.

For reference, see these URLs:
http://www.gnu.org/software/automake/manual/html_node/Public-Macros.html#Public-Macros
http://www.gnu.org/software/automake/manual/html_node/Optional.html

Signed-off-by: Tulio Magno Quites Machado Filho <tuliom@linux.vnet.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -11,9 +11,10 @@
 
 AC_PREREQ(2.13)
 
-AC_INIT(libop/op_config.h)
-AM_INIT_AUTOMAKE(oprofile, 0.9.9git)
-AM_CONFIG_HEADER(config.h)
+AC_INIT([OProfile], [0.9.9git])
+AC_CONFIG_SRCDIR([libop/op_config.h])
+AM_INIT_AUTOMAKE
+AC_CONFIG_HEADERS(config.h)
 
 AC_CHECK_DECLS([basename], [], [], [[#include <libgen.h>]])
 AC_PROG_RANLIB
